--- a/view/index.html
+++ b/view/index.html
@@ -5,34 +5,21 @@
     <title>Weekend Planner</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="/index.js"></script>
   </head>
   <body>
 
-    <script src="/schedule.js"></script>
+  	<h1>Weekend Planner</h1>
 
+  	<p>Where are you going? <input type="text" id="trip_dest"></p>
+  	<p>From: <input type="date" id="trip_from"></p>
+  	<p>To: <input type="date" id="trip_to"></p>
 
-    <h2>Weekend Planner</h2>
-    <div id="manual_add">
-      <h3>Manual Entry</h3>
-      <div> 
-        <p>What: <input type="text" id="activity"></p>
-        <p>When: <input type="datetime-local" id="time"></p>
-        <p>Where: <input type="text" id="location"></p>
-        <button id="manual_add_btn">Add Event!</button>
-      </div>
-    </div>
-    <div id="suggestions_add">
-      <h3>Suggestions</h3>
-      <p>Coming Soon</p>
-    </div>
-    <div id="display">
-      <h3>Your Weekend</h3>
-      <div id='the_list'></div>
-    </div>
-    <div id="chat">
-      <h3>Group Chat</h3>
-      <p>Coming Soon</p>
-    </div>
+  	<br>
+  	<p id=share></p>
+  	<br>
+
+  	<button id="btn_trip">Plan my weekend!</button>
 
 
   </body>
