chat function, no database

--- a/view/index.html
+++ b/view/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Weekend Planner</title>
+    <link rel="icon" href="https://cdn0.iconfinder.com/data/icons/time-organizing/512/xxx032-512.png">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/index.js"></script>
