--- a/view/plan.html
+++ b/view/plan.html
@@ -7,6 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/plan.js"></script>
+    <link rel="stylesheet" href="/plan.css" type="text/css">
   </head>
   <body>
 
