--- a/view/plan.html
+++ b/view/plan.html
@@ -7,38 +7,40 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/plan.js"></script>
+    <script src="/datefunctions.js"></script>
     <link rel="stylesheet" href="/plan.css" type="text/css">
   </head>
   <body>
-
     <h1>Weekend Planner</h1>
-    <h4 id="trip_info"></h4>
-    <div id="manual_add">
-      <h3>Add Event</h3>
-      <div> 
-        <p>What: <input type="text" id="activity"></p>
-        <p>When: <input type="datetime-local" id="time"></p>
-        <p>Where: <input type="text" id="location"></p>
-        <button id="manual_add_btn">Add Event!</button>
+    <h4 style="text-align:center" id="trip_info"></h4>
+    <div class="row">
+      <div id="column2"> 
+        <div id="manual_add">
+          <h3>Add Event</h3>
+          <div> 
+            <p>What: <input type="text" id="activity"></p>
+            <p>When: <input type="datetime-local" id="time"></p>
+            <p>Where: <input type="text" id="location"></p>
+            <button id="manual_add_btn">Add!</button>
+          </div>
+        </div>
+        <div id="suggestions_add">
+          <h3>Event Suggestions</h3>
+          <p><i>Coming Soon</i></p>
+        </div>
+        <div id="chat">
+          <h3>Group Chat</h3>
+          <p>Name: <input id="username"></input></p>
+          <div id="chat_area"></div>
+          <input type="text" id="chat_input" style="width:78%; margin-top:4px"> <button id="send_btn">Send</button></input>
+        </div>
+      </div>
+      <div id="column1">
+        <div id="display">
+          <h2>Your Weekend</h2>
+          <div id='the_list'></div>
+        </div>
       </div>
     </div>
-
-    <div id="suggestions_add">
-      <h3>Event Suggestions</h3>
-      <p><i>Coming Soon</i></p>
-    </div>
-
-    <div id="display">
-      <h3>Your Weekend</h3>
-      <div id='the_list'></div>
-    </div>
-
-    <div id="chat">
-      <h3>Group Chat</h3>
-      <p>Name: <input id="username"></input></p>
-      <div id="chat_area" style="overflow-y: scroll; height:300px; width:50%; border:1px solid black;"></div>
-      <input type="text" id="chat_input" style="width:46%; margin-top: 4px"> <button id="send_btn">Send</button></input>
-    </div>
-
   </body>
 </html>
